--- a/index.html
+++ b/index.html
@@ -1,1 +1,209 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Project Water</title>
+<style>
+	body {
+			margin: 0;
+			padding: 0;
+		}
+		.slideshow-container {
+			position: fixed;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			overflow: hidden;
+			z-index: -1;
+		}
+		.slideshow-container > div {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			background-repeat: no-repeat;
+			background-size: cover;
+			animation: slideshow 9s infinite;
+		}
+		.slideshow-container > div:nth-child(1) {
+			background-image: url('pic1.jpg');
+			animation-delay: 0s;
+		}
+		.slideshow-container > div:nth-child(2) {
+			background-image: url('pic2.jpg');
+			animation-delay: 3s;
+		}
+		.slideshow-container > div:nth-child(3) {
+			background-image: url('pic3.jpg');
+			animation-delay: 6s;
+		}
+		@keyframes slideshow {
+			0% {
+				opacity: 0;
+			}
+			12.5% {
+				opacity: 1;
+			}
+			25% {
+				opacity: 1;
+			}
+			37.5% {
+				opacity: 0;
+			}
+			100% {
+				opacity: 0;
+			}
+		}
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+			background-color: #f7f7f7;
+		}
+		nav {
+			background-color: #4e54c8;
+			background-image: linear-gradient(315deg, #4e54c8 0%, #8f94fb 74%);
+			height: 60px;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			padding: 0 20px;
+		}
+		nav a {
+			color: #fff;
+			text-decoration: none;
+			font-size: 18px;
+			margin: 0 10px;
+			padding: 10px;
+		}
+		nav a:hover {
+			background-color: rgba(255, 255, 255, 0.2);
+			border-radius: 5px;
+		}
+		nav a.active {
+			background-color: rgba(255, 255, 255, 0.2);
+			border-radius: 5px;
+		}
+		nav a.logo {
+			font-size: 24px;
+			font-weight: bold;
+		}
 
+</style>
+
+<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
+
+</head>
+<body>
+	<div class="slideshow-container">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+		<nav>
+		<a href="#" class="logo">Water 10,000</a>
+		<div>
+			<a href="#" class="active">Home</a>
+			<a href="project.html">Projects</a>
+			<a href="#">About Us</a>
+		</div>
+	</nav>
+ <section class="hero">
+    <div class="hero-content">
+      <h2>Bringing Clean Water to Everyone</h2>
+      <p>Our mission is to provide clean and safe drinking water to communities in need.</p>
+      <a href="project.html" class="btn">Learn More</a>
+    </div>
+  </section>
+
+  <section class="features">
+    <h2>Features</h2>
+    <ul>
+      <li>
+        <div class="icon"><i class="fa fa-tint"></i></div>
+        <h3>Safe Water</h3>
+        <p>We ensure that the water we provide is safe for consumption by treating it with the latest technologies and equipment.</p>
+      </li>
+      <li>
+        <div class="icon"><i class="fa fa-heart"></i></div>
+        <h3>Healthy Living</h3>
+        <p>Clean water is the foundation of good health. By providing safe drinking water, we aim to improve the health of people in the community.</p>
+      </li>
+      <li>
+        <div class="icon"><i class="fa fa-users"></i></div>
+        <h3>Community Support</h3>
+        <p>We work closely with local communities to identify their needs and ensure that our projects are sustainable and successful.</p>
+      </li>
+    </ul>
+  </section>
+
+  <section class="cta">
+    <h2>Join Us in Our Mission</h2>
+    <p>Together we can make a difference in the lives of people who lack access to clean water. Join us in our mission to provide safe drinking water to everyone.</p>
+
+  </section>
+	
+
+</div>
+<section id="slider" class="pt-5">
+  <div class="container">
+    <h1 class="text-center"><b></b></h1>
+	  <div class="slider">
+				<div class="owl-carousel">
+					<div class="slider-card">
+						<div class="d-flex justify-content-center align-items-center mb-4">
+							<img src="images/slide-1.jpg" alt="" >
+						</div>
+						<h5 class="mb-0 text-center"><b>Safety</b></h5>
+						<p class="text-center p-4">This is to ensure that the water is safe for the community to use for any means.</p>
+					</div>
+					<div class="slider-card">
+						<div class="d-flex justify-content-center align-items-center mb-4">
+							<img src="images/slide-2.jpg" alt="">
+						</div>
+						<h5 class="mb-0 text-center"><b>Provision</b></h5>
+						<p class="text-center p-4">Ensures each memebr in the community can gain acces to water.</p>
+					</div>
+					<div class="slider-card">
+						<div class="d-flex justify-content-center align-items-center mb-4">
+							<img src="images/slide-3.jpg" alt="">
+						</div>
+						<h5 class="mb-0 text-center"><b>Relaibity</b></h5>
+						<p class="text-center p-4">At any moment water can be collected at various points for use.</p>
+					</div>
+					<div class="slider-card">
+						<div class="d-flex justify-content-center align-items-center mb-4">
+							<img src="images/slide-4.jpg" alt="">
+						</div>
+						<h5 class="mb-0 text-center"><b>Resource</b></h5>
+						<p class="text-center p-4">The water shall be used for irrigation,domestic use,generation of HP  and furthure to solve the communittee issues and challanges faced at hand</p>
+					</div>
+					<div class="slider-card">
+						<div class="d-flex justify-content-center align-items-center mb-4">
+							<img src="images/slide-5.jpg" alt="">
+						</div>
+						<h5 class="mb-0 text-center"><b>Affordability</b></h5>
+						<p class="text-center p-4">Viable ease of access</p>
+					</div>
+				</div>
+			</div>
+  </div>
+</section>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script> 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/script.js"></script>
+	<div class="slideshow-container">
+		<div></div>
+		<div></div>
+		<div></div>
+
+</body>
+</html>
