--- a/project.html
+++ b/project.html
@@ -1,71 +1,181 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Project Data</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.7.570/pdf.min.js"></script>
+    <meta charset="utf-8">
+    <title>DASHMIN - Bootstrap Admin Template</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <div class="container">
-    <h1>Project Data</h1>
-    <div class="pdf-box">
-      <div class="pdf">
-        <div class="pdf-img">
-          <embed src="pdf/Project1.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
+    <div class="container-xxl position-relative bg-white d-flex p-0">
+        <!-- Spinner Start -->
+        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
         </div>
-        <h3>Project 1</h3>
-      </div>
-      <div class="pdf">
-        <div class="pdf-img">
-          <embed src="pdf/Project2.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
+        <!-- Spinner End -->
+
+
+        <!-- Sidebar Start -->
+        <div class="sidebar pe-4 pb-3">
+            <nav class="navbar bg-light navbar-light">
+                <a href="index.html" class="">
+                    <h3 class="text-primary"></i>MoWIS project</h3>
+                </a>
+                <div class="d-flex align-items-center ms-4 mb-4">
+                </div>
+                <div class="navbar-nav w-100">
+                    <a href="project.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Project</a>
+                        <a href="index.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Home</a>
+                    </div>
+                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Contact Us</a>
+                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>About Us</a>
+                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Preference</a>
+                    <div class="nav-item dropdown">
+   
+            
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <h3>Project 2</h3>
-      </div>
-      <div class="pdf">
-        <div class="pdf-img">
-          <embed src="pdf/Project3.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"/>
+        <!-- Sidebar End -->
+
+
+        <!-- Content Start -->
+        <div class="content">
+            <!-- Navbar Start -->
+            <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
+                <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
+                    <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
+                </a>
+                <a href="#" class="sidebar-toggler flex-shrink-0">
+                    <i class="fa fa-bars"></i>
+                </a>
+                <form class="d-none d-md-flex ms-4">
+                </form>
+                <div class="navbar-nav align-items-center ms-auto">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                            <a href="#" class="dropdown-item">
+                                <div class="d-flex align-items-center">
+                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <div class="ms-2">
+                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
+                                        <small>15 minutes ago</small>
+                                    </div>
+                                </div>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item">
+                                <div class="d-flex align-items-center">
+                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <div class="ms-2">
+                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
+                                        <small>15 minutes ago</small>
+                                    </div>
+                                </div>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item">
+                                <div class="d-flex align-items-center">
+                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <div class="ms-2">
+                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
+                                        <small>15 minutes ago</small>
+                                    </div>
+                                </div>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item text-center">See all message</a>
+                        </div>
+                    </div>
+                    <div class="nav-item dropdown">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                            <a href="#" class="dropdown-item">
+                                <h6 class="fw-normal mb-0">Profile updated</h6>
+                                <small>15 minutes ago</small>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item">
+                                <h6 class="fw-normal mb-0">New user added</h6>
+                                <small>15 minutes ago</small>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item">
+                                <h6 class="fw-normal mb-0">Password changed</h6>
+                                <small>15 minutes ago</small>
+                            </a>
+                            <hr class="dropdown-divider">
+                            <a href="#" class="dropdown-item text-center">See all notifications</a>
+                        </div>
+                    <div></div>
+                    <div></div>
+            </nav>
+            <section>
+                <div>
+                <h1>Summary of internevtions</h1>
+                <a href="#">Program Summary</a>
+                <br><a href="/pdf/Project2">Table Summary Per Intervention</a></br>
+                <iframe width="1075" height="732" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS3gUCb2J79c9NvnSiWZP5K9wOyAooM9cBUcAC9RP6p8Y9py-HNcDWgb_0VB33YPVwInhBuV6v_-3eH/pubchart?oid=2080049895&amp;format=interactive"></iframe>
+</div>
+</section>\
+</div>
+</nav
+            </section>
         </div>
-        <h3>Project 3</h3>
-      </div>
-    </div>
-  </div>
+    </nav>
+<nav>
+    <div></div>
+        <section>
+            <h1>Summary in bar graphs</h1>
+            <br><a href="/pdf/Project3">Total Summary Excel Sheet</a></br>
+            <iframe width="1288" height="785" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTKVW2K50UohkwzeCzFitsNresDwrAVNP5X2E7xF5UTTOVUhPgw9RE9XtXvYJ_n5Jnrr-FsDs0oo5Zs/pubchart?oid=1697799708&amp;format=interactive"></iframe>
+</div>
+        </section>
+        </nav>
 
-  <script>
-    $(document).ready(function(){
-      var pdfs = document.querySelectorAll('.pdf-img embed');
 
-      pdfs.forEach(function(pdf){
-        var pdfUrl = pdf.src.split('#')[0];
-        var pdfLoadingTask = pdfjsLib.getDocument({url: pdfUrl});
-        pdfLoadingTask.promise.then(function(pdf) {
-          pdf.getPage(1).then(function(page) {
-            var viewport = page.getViewport({scale: 0.5});
-            var canvas = document.createElement('canvas');
-            var context = canvas.getContext('2d');
-            canvas.height = viewport.height;
-            canvas.width = viewport.width;
-            pdf.getPage(1).then(function(page) {
-              var viewport = page.getViewport({scale: 0.5});
-              var canvas = document.createElement('canvas');
-              var context = canvas.getContext('2d');
-              canvas.height = viewport.height;
-              canvas.width = viewport.width;
 
-              var renderContext = {
-                canvasContext: context,
-                viewport: viewport
-              };
-              page.render(renderContext).promise.then(function() {
-                pdf.src = canvas.toDataURL();
-                $(pdf).css('opacity', 1);
-              });
-            });
-          });
-        });
-      });
-    });
-  </script>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/chart/chart.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    <script src="js/main.js"></script>
 </body>
+
 </html>
