--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ section{
 				<li><a href="index.html">Home</a></li>
 				<li><a href="project.html">Project</a></li>
 				<li><a href="login.html">Preference</a></li>
-				<li><a href="contact_us.html">Contact Us</a></li>
+				<li><a href="untitled.html">Contact Us</a></li>
 				<li><a href="contact_us.html">About Us</a></li>
 			</ul>
 			<a href="#" class="action_btn">Go Back</a>
