--- a/untitled.html
+++ b/untitled.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h4>Partner with Us</h4>
-		<form action="https://formsubmit.co/listedcampusto1@gmail.com" method="POST">
+		<form action="https://formsubmit.co/el/becefi" method="POST">
 			<input type="text" name="Full Name/Organizaton Name" placeholder="Name" required/>
 			<input type="Email" name="Email" placeholder="Email" required/>
 			<select id="country-code">
